# pcl_zk

./: CMakeLists copy.txt  CMakeLists.txt  CMakeLists_cpy2.txt  README.md  package.xml
data/: my_cloud.xyz  traiettoria.txt
data/backup/: my_cloud.xyz  my_normals.pcd  new_coordinates.pcd
data/cappello/: my_cloud.xyz  my_stl.stl
data/cappello_un_sacco_di_punti/: mesh.ply  mesh.stl  meshNotCorrect.ply  my_cloud.xyz  my_normals.pcd  my_stl.stl  traiettoria.txt
data/cubo/cubo_buono/: my_cloud.xyz  my_stl.stl
data/cubo_ottimo_camera_registrato/: mesh.stl  meshNotCorrect.ply
data/fucile_corto/: my_normals.pcd  my_stl.stl
data/fucile_lungo/: my_normals.pcd  my_stl.stl
data/qr_cube/: mesh.stl
data/sfera/: traiettoria.txt
launch/: launch.launch  plane_slicer_rastering_generator_demo.launch
scripts/: correct_ply.py  delete_cloud_above_z.py  handle_manual_pointcloud.py  pointcloud2_analysis_open3d.py  publish_marker.py
src/: greedy_projection.cpp  plane_slicer_raster_generator_node.cpp
